InternexDev_Sandbox/src/objects/Monthly_Interest_Application__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Monthly Interest Applications</relationshipLabel>
        <relationshipName>Monthly_Interest_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commitment_Fee__c</fullName>
        <label>Unused Line Fee</label>
        <summarizedField>Daily_Interest_Accrual__c.Commitment_fee_acc__c</summarizedField>
        <summaryFilterItems>
            <field>Daily_Interest_Accrual__c.Non_performing_asset__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Daily_Interest_Accrual__c.Monthly_Interest_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Start Month Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Base_Rate__c</fullName>
        <label>Interest Base Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Base__c</fullName>
        <label>Interest Base</label>
        <picklist>
            <picklistValues>
                <fullName>Citi Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internex base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIBOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS Prime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Charged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Applied__c</fullName>
        <formula>Interest_Base_Rate__c +  Interest_Spread__c</formula>
        <label>Interest Rate Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Spread__c</fullName>
        <label>Interest Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest Earned</label>
        <summarizedField>Daily_Interest_Accrual__c.Interest__c</summarizedField>
        <summaryFilterItems>
            <field>Daily_Interest_Accrual__c.Non_performing_asset__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Daily_Interest_Accrual__c.Monthly_Interest_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Date__c</fullName>
        <description>Created for computing</description>
        <label>Max Date</label>
        <summarizedField>Daily_Interest_Accrual__c.Date__c</summarizedField>
        <summaryForeignKey>Daily_Interest_Accrual__c.Monthly_Interest_Application__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MinCommitmentAmount__c</fullName>
        <formula>Client_Account__r.MinCommitmentAmount__c</formula>
        <label>Min Utilization Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month1__c</fullName>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH(Date__c)</formula>
        <label>Month Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Product__c</fullName>
        <label>Monthly Product</label>
        <summarizedField>Daily_Interest_Accrual__c.FIU_Outstanding__c</summarizedField>
        <summaryFilterItems>
            <field>Daily_Interest_Accrual__c.Non_performing_asset__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Daily_Interest_Accrual__c.Monthly_Interest_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>CASE(Month1__c,
1, &quot;JAN&quot;,
2, &quot;FEB&quot;,
3, &quot;MAR&quot;, 
4, &quot;APR&quot;, 
5, &quot;MAY&quot;, 
6, &quot;JUN&quot;,
7, &quot;JUL&quot;,
8, &quot;AUG&quot;,
9, &quot;SEP&quot;,
10, &quot;OCT&quot;,
11, &quot;NOV&quot;,
12, &quot;DEC&quot;,
&quot;None&quot;) &amp; &apos;-&apos; &amp;  Text(Year1__c)</formula>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Fee_Charged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UL Fee Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year1__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR(Date__c)</formula>
        <label>Year Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Monthly Interest Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Account__c</columns>
        <columns>Date__c</columns>
        <columns>Active__c</columns>
        <columns>Applied__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Business_Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Interest Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>